--- a/bower.json
+++ b/bower.json
@@ -1,32 +1,32 @@
 {
-  "name": "generadorLoterias",
-  "version": "1.0.0",
-  "homepage": "https://github.com/ignaciohita/generadorInformes",
-  "description": "Ejemplo del libro: un sistema sencillo que genera combinaciones aleatorias para lotería",
-  "main": "app/index.html",
-  "moduleType": [
+    "name": "generadorLoteria",
+    "version": "1.0.0",
+    "homepage": "https://github.com/ignaciohita/generadorLoteria",
+    "description": "Ejemplo del libro: un sistema sencillo que genera combinaciones aleatorias para lotería",
+    "main": "app/index.html",
+    "moduleType": [
     "globals"
   ],
-  "keywords": [
+    "keywords": [
     "angularJS",
     "example",
     "learning"
   ],
-  "authors": [
+    "authors": [
     "Jose Ignacio Hita <ignaciohita@gmail.com>"
   ],
-  "license": "MIT",
-  "ignore": [
+    "license": "MIT",
+    "ignore": [
     "**/.*",
     "node_modules",
     "bower_components",
     "test",
     "tests"
   ],
-  "dependencies": {
-    "angular": "~1.4.0",
-    "bootstrap": "~3.3.4",
-    "angular-bootstrap": "~0.13.0",
-    "angular-route": "~1.4.0"
-  }
+    "dependencies": {
+        "angular": "~1.4.0",
+        "bootstrap": "~3.3.4",
+        "angular-bootstrap": "~0.13.0",
+        "angular-route": "~1.4.0"
+    }
 }
